fix(gh-page.css): overflow

--- a/gh-page.css
+++ b/gh-page.css
@@ -29,6 +29,7 @@ article {
 	display: block;
 	width: 100%;
 	padding: 1rem 2rem 2rem;
+	overflow-x: hidden;
 }
 h2 {
 	font-size: 1.3em;
